--- a/src/routes/login/login.html
+++ b/src/routes/login/login.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title>Transparent Login Form HTML CSS</title>
+      <title>All-Terrain</title>
       <link rel="stylesheet" href="login.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
    </head>
