--- a/src/routes/home/home.html
+++ b/src/routes/home/home.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <title>Hello World!</title>
   </head>
@@ -11,5 +10,10 @@
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
+
+    <a href="C:\Users\chuy2\lt-system\src\routes\login\login.html">
+      <button>Login</button>
+    </a>
+    
   </body>
 </html>
