--- a/src/routes/login/login.html
+++ b/src/routes/login/login.html
@@ -8,7 +8,7 @@
    </head>
    <body>
       <div class="bg-img">
-        <div class="content">
+         <div class="content">
             <img src="logo.jpg" alt="Logo" class="logo">
             <header>Inicio de Sesión</header>
             <form action="#">
@@ -24,25 +24,11 @@
                <div class="pass">
                   <a href="#"></a>
                </div>
-               <div class="field">
+               <div>
                   <input type="submit" value="LOGIN">
                </div>
             </form>
+         </div>
       </div>
-      <script>
-         const pass_field = document.querySelector('.pass-key');
-         const showBtn = document.querySelector('.show');
-         showBtn.addEventListener('click', function(){
-          if(pass_field.type === "password"){
-            pass_field.type = "text";
-            showBtn.textContent = "HIDE";
-            showBtn.style.color = "#3498db";
-          }else{
-            pass_field.type = "password";
-            showBtn.textContent = "SHOW";
-            showBtn.style.color = "#222";
-          }
-         });
-      </script>
-   </body>
+      <script src="login.js"></script>
 </html>
