--- a/src/routes/home/home.html
+++ b/src/routes/home/home.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Hello World!</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
-
-    <a href="C:\Users\chuy2\lt-system\src\routes\login\login.html">
-      <button>Login</button>
-    </a>
-    
-  </body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="home.css"> 
+</head>
+<body>
+    <header>
+        <h1>Bienvenido a la Página de Inicio</h1>
+    </header>
+    <main>
+        <p>Has iniciado sesión correctamente.</p>
+        <a href="login.html" class="logout">Cerrar Sesión</a>
+    </main>
+</body>
 </html>
