feat(change): YA JALA YA NO LE MUEVAN NADA FALTA CONECTAR USUARIOS Y HOME

--- a/src/routes/login/login.html
+++ b/src/routes/login/login.html
@@ -11,14 +11,14 @@
          <div class="content">
             <img src="logo.jpg" alt="Logo" class="logo">
             <header>Inicio de Sesión</header>
-            <form action="#">
+            <form id="login-form">
                <div class="field">
                   <span class="fa fa-user"></span>
-                  <input type="text" required placeholder="USUARIO">
+                  <input type="text" id="username" required placeholder="USUARIO">
                </div>
                <div class="field space">
                   <span class="fa fa-lock"></span>
-                  <input type="password" class="pass-key" required placeholder="CONTRASEÑA">
+                  <input type="password" id="password" class="pass-key" required placeholder="CONTRASEÑA">
                   <span class="show">SHOW</span>
                </div>
                <div class="pass">
