--- a/src/routes/login/login.html
+++ b/src/routes/login/login.html
@@ -5,11 +5,14 @@
       <title>All-Terrain</title>
       <link rel="stylesheet" href="login.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+      <link rel="stylesheet" href="../../modules/loading/loading.css">
+      <script src="../../modules/loading/loading.js" defer></script>
+      
    </head>
    <body>
       <div class="bg-img">
          <div class="content">
-            <img src="logo.jpg" alt="Logo" class="logo">
+            <img src="../../public/logo.jpg" alt="Logo" class="logo">
             <header>Inicio de Sesión</header>
             <form id="login-form">
                <div class="field">
